<resources>
    <string name="app_name">Food</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="auth_login">Login</string>
    <string name="email_hint">example@mail.com</string>
    <string name="password_hint">Password</string>
    <string name="title_placeholder">[TITLE]</string>
    <string name="description_placeholder">[DESCRIPTION]</string>
    <string name="instruction_placeholder">[INSTRUCTION]</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="instructions_title">Instructions</string>
    <string name="recipes_title">Recipes</string>
    <string name="profile_title">Profile</string>
    <string name="price_placeholder">¢[PRICE]</string>
    <string name="add_to_cart_text">Add to Cart</string>
    <string name="title_cart">Cart</string>
    <string name="cart_price_label">Total Price:</string>
    <string name="total_price_placeholder">¢[PRICE]</string>
    <string name="checkout_button_label">To Checkout</string>
    <string name="unimplemented_generic_label">Unimplemented</string>
    <string name="order_history">My Orders</string>
    <string name="order_id_label">Order ID</string>
</resources>