<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:gravity="right"
    android:orientation="vertical"
    tools:context=".ui.recipe.RecipeActivity">

    <TextView
        android:id="@+id/viewRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title_placeholder"
        android:textAlignment="viewStart"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewRecipeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/description_placeholder"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/viewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/price_placeholder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/instructions_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#E8E8E8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/instructionBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/ingredient_list_component" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/ingredients_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#E8E8E8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:onClick="onAddToCart"
        android:text="@string/add_to_cart_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_add_shopping_cart_24_white"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="30dp" />
</LinearLayout>